# aruco_create_detecte

./: CMakeLists.txt  README.md  create_maker.cpp  detect_markers.cpp
